--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     ext {
         compose_version = '1.1.0-rc01'
         navigation_version = '2.4.0-rc01'
+        roomVersion = '2.4.0'
+        lifecycle_version = '2.4.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
